tests/errors/error_type_simple.wyn
fn main() {
    let x: int = "hello";
    print(x);
}